# simple-iu

./: .gitignore  Cargo.toml  README.md  Rocket.toml  Settings.example.toml
src/: api_key.rs  config.rs  main.rs  utils.rs
