[package]
name = "simple-iu"
version = "0.1.0"
authors = ["pascal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
rand = "0.8.3"
tokio = "1.4.0"
chrono = "0.4.19"
serde = "1.0.123"
lazy_static = "1.4.0"
serde_derive = "1.0.123"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket.git"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"